Displacement-MicroMap-Toolkit squash
commit a727f3e440ce1bfb252b6c4ea30baf67e4760619

--- a/micromesh_python/CMakeLists.txt
+++ b/micromesh_python/CMakeLists.txt
@@ -102,9 +102,11 @@ if(Python3_FOUND AND EXISTS ${PYBIND11_INCLUDE_DIR})
   if (WIN32)
     set(SET_ENV_CMD "set")
     set(PYTHON_PATH "${CMAKE_CURRENT_BINARY_DIR}/Release;%PYTHONPATH%")
+    set(PYTHON_EXE "\"${Python3_EXECUTABLE}\"")
   else()
     set(SET_ENV_CMD "export")
     set(PYTHON_PATH "${CMAKE_CURRENT_BINARY_DIR}:$PYTHONPATH")
+    set(PYTHON_EXE "${Python3_EXECUTABLE}")
   endif()
   configure_file("install_jupyterlab.cmd.in" "${CMAKE_CURRENT_BINARY_DIR}/install_jupyterlab.cmd" @ONLY)
   configure_file("start_jupyterlab.cmd.in" "${CMAKE_CURRENT_BINARY_DIR}/start_jupyterlab.cmd" @ONLY)
