Displacement-MicroMap-Toolkit squash
commit d139556f7b1171e8c3c0a8024d1b79412be9f4c4

Co-authored-by: Brian Barran <bbarran@nvidia.com>
Co-authored-by: Christoph Kubisch <ckubisch@nvidia.com>
Co-authored-by: David Akeley <dakeley@nvidia.com>
Co-authored-by: Martin-Karl Lefrancois <mlefrancois@nvidia.com>
Co-authored-by: Mathias Heyer <mheyer@nvidia.com>
Co-authored-by: Neil Bickford <nbickford@nvidia.com>
Co-authored-by: Pascal Gautron <pgautron@nvidia.com>
Co-authored-by: Pyarelal Knowles <pknowles@nvidia.com>
Co-authored-by: Tristan Lorach <tlorach@nvidia.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,9 @@
 	path = external/libpng
 	url = https://git.code.sf.net/p/libpng/code
 	shallow = true
+[submodule "external/heightmap_rtx"]
+       path = external/heightmap_rtx
+       url = https://github.com/NVIDIAGameWorks/heightmap_rtx.git
 [submodule "external/Displacement-MicroMap-SDK"]
 	path = external/Displacement-MicroMap-SDK
 	url = ../Displacement-MicroMap-SDK.git
